# django-quickie

./: .gitignore  pyproject.toml
app/: settings.py  urls.py
templates/: base.html  home.html
templates/registration/: login.html  signup.html
users/: admin.py  views.py
