[tool.poetry]
name = "django_quickie"
version = "0.1.0"
description = ""
authors = ["j0lv3r4 <juan@jolvera.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.6"
dj_database_url = "^0.5.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pylint = "^2.5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
